[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Scenes/MessageButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/UI/Scripts/Message.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Scenes/MessageText.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://External/Fonts/LinLibertine.ttf"

[sub_resource type="DynamicFont" id=2]
size = 17
use_filter = true
font_data = SubResource( 1 )

[node name="Message" type="HBoxContainer"]
margin_right = 313.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 66 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
message_text = "This is a message notification in the actual Message node."

[node name="MessageButton" parent="." instance=ExtResource( 1 )]

[node name="VSeparator" type="VSeparator" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 56.0
margin_right = 64.0
margin_bottom = 66.0
rect_min_size = Vector2( 8, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageText" parent="." instance=ExtResource( 3 )]
margin_left = 68.0
margin_right = 317.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "This is a message notification in the actual Message node."
message_text = "This is a message notification in the actual Message node."

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true
[connection signal="mouse_entered" from="MessageButton" to="." method="_on_MessageButton_mouse_entered"]
[connection signal="mouse_exited" from="MessageButton" to="." method="_on_MessageButton_mouse_exited"]
[connection signal="pressed" from="MessageButton" to="." method="_on_MessageButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="MessageButton"]
